--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
     <!-- coucou hacker 👾 Bienvenue dans le code de notre site ! -->
     <h1>shamiii is the best!!!!</h1>
-    <img src="C:\Users\MentorEDG\Desktop\shamiiii\cute-bunnies-102__605.jpg">
+    <img src="cute-bunnies-102__605.jpg">
     <p>Ceci est mon tout premier site web.</p>
     <a href="https://www.google.com">Clique ici pour voir Google</a>
 </body>
